# array-as-vcf

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.rst  LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: release_checklist.md
.github/workflows/: ci.yml
aav/: __init__.py  cli.py  lookup.py  readers.py  utils.py  variation.py
docs/: Makefile  aav.rst  conf.py  index.rst  make.bat
src/array_as_vcf/: cli.py  lookup.py  readers.py  variation.py
tests/: test_cli.py  test_lookup.py  test_readers.py  test_utils.py  test_variation.py
tests/data/: affy_test.txt  cytoscan_test.txt  lookup_table_test.json  lumi_317_test.txt  lumi_370_test.txt  open_array_all_calls.txt  open_array_test.txt
