[metadata]
name=array-as-vcf
version=1.1.0-dev
description=Convert SNP array to VCF
long_description=file: README.md
long_description_content_type=text/markdown
author=Leiden University Medical Center
author_email=KG_bioinf@lumc.nl
license=MIT
license_file=LICENSE
keywords=
    array
    vcf
    SNP
    convert
    OpenArray
    Cytoscan
    lumi370k
    lumi317k
    Affymetrix

classifiers=
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = src
packages = find:
zip_safe=False
python_requires=>=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    array-as-vcf = array_as_vcf.cli:convert
    aav = array_as_vcf.cli:convert